# opengl-learning

./: CMakeLists.txt  main.cpp  renderer.h
cmake_modules/: FindGLFW3.cmake
res/shaders/: default.glsl
